# DDBDjango

./: .gitignore  MANIFEST.in  Makefile  README.md  conftest.py  docker-compose.yml  lambda_handler.py  pyproject.toml  pytest.ini  requirements.txt  spec.md
config/: settings.py  urls.py
demo_app/: admin.py  apps.py  cognito_mock_views.py  frontend_urls.py  frontend_views.py  models.py  urls.py  views.py
demo_app/management/commands/: runserver.py  seed_posts.py  setup_cognito.py
demo_app/migrations/: 0001_initial.py
demo_app/templates/demo_app/: author_detail.html  base.html  category_detail.html  explorer.html  home.html  post_detail.html  tag_detail.html  write_post.html
docker/: cloudfront-proxy.conf.template  opensearch-cors-proxy.conf
dynamo_backend/: __init__.py  admin.py  admin_search.py  apps.py  auth_backend.py  connection.py  debug_panel.py  exceptions.py  fields.py  m2m.py  manager.py  middleware.py  migration_executor.py  migration_loader.py  migration_ops.py  migration_writer.py  models.py  opensearch_sync.py  queryset.py  router.py  table.py  user_model.py
dynamo_backend/legacy/: README.md  __init__.py  admin.py  dmigrate.py  fields.py  manager.py  migration_autodetector.py  migration_fields.py  migration_recorder.py  models.py  queryset.py
dynamo_backend/management/: __init__.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css
scripts/: deploy_frontend.sh  deploy_lambda.sh
templates/account/: login.html  logout.html  password_reset.html  signup.html
templates/socialaccount/: authentication_error.html  signup.html
tests/: conftest.py  test_demo_app.py  test_dynamo_backend.py  test_e2e.py  test_legacy_dynamomodel.py  test_legacy_migrations.py  test_migrations.py  test_relations.py
(+20 files in other folders)
